--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "html-validate": "^2.19.0",
     "mkdirp": "^1.0.4",
     "node-sass": "^4.13.1",
